--- a/templates/assignment_creation.html
+++ b/templates/assignment_creation.html
@@ -8,7 +8,7 @@
 <h3 class="text-center fw-bold mb-4">{{course_name}}/ Assignment - 1</h3>
 
 <!-- Assignment Form -->
-<form method="POST" action="{{ url_for('assignment_creation', course_name = course_name, course_id = course_id) }}" enctype="multipart/form-data">
+<form method="POST" action="{{ url_for('assignment_creation', course_name = course_name, course_code = course_code) }}" enctype="multipart/form-data">
   
   <!-- Title -->
   <div class="section-box">
