--- a/templates/announcement_teacher.html
+++ b/templates/announcement_teacher.html
@@ -6,43 +6,44 @@
 
 {% block content %}
 <div class="announcements-container">
-    <!-- Create New Announcement Button -->
-    <div class="create-announcement">
-        <button class="btn btn-primary">
-            <i class="fas fa-plus"></i> Create New Announcement
-        </button>
+   <div class="create-announcement mb-3">
+    <a href="{{ url_for('announcement_view_teacher', course_name=course_name, course_code=course_code) }}" class="btn btn-primary">
+        <i class="fas fa-plus"></i> Create New Announcement
+    </a>
+</div>
+
+    <!-- Debug information -->
+    <div class="debug-info mb-3">
+        <p>Course Code: {{ course_code }}</p>
+        <p>Number of announcements: {{ announcements|length }}</p>
     </div>
 
-    <!-- Announcements List -->
     <div class="announcements-list">
-        <!-- Example announcement items -->
-        <div class="announcement-item">
-            <div class="announcement-header">
-                <h4>Assignment Deadline Extended</h4>
-                <span class="announcement-date">Posted: March 15, 2024</span>
+        {% if announcements %}
+            {% for announcement in announcements %}
+            <div class="announcement-item">
+                <div class="announcement-header">
+                    <h4>{{ announcement[0].split('_')[1] }}</h4>
+                    <span class="announcement-date">Posted: {{ announcement[2].strftime('%B %d, %Y') }}</span>
+                </div>
+                <div class="announcement-content">
+                    <p>{{ announcement[1] }}</p>
+                </div>
+                <div class="announcement-footer">
+                    <a href="{{ url_for('announcement_edit', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" class="btn btn-secondary">
+                        <i class="fas fa-edit"></i> Edit
+                    </a>
+                    <a href="{{ url_for('announcement_delete', course_name=course_name, course_code=course_code, announcement_id=announcement[0]) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this announcement?')">
+                        <i class="fas fa-trash"></i> Delete
+                    </a>
+                </div>
             </div>
-            <div class="announcement-content">
-                <p>Due to technical difficulties, the deadline for Assignment 1 has been extended to March 20, 2024. Please make sure to submit your work before the new deadline.</p>
+            {% endfor %}
+        {% else %}
+            <div class="alert alert-info">
+                No announcements found for this course.
             </div>
-            <div class="announcement-footer">
-                <button class="btn btn-secondary">Edit</button>
-                <button class="btn btn-danger">Delete</button>
-            </div>
-        </div>
-
-        <div class="announcement-item">
-            <div class="announcement-header">
-                <h4>New Course Material Available</h4>
-                <span class="announcement-date">Posted: March 14, 2024</span>
-            </div>
-            <div class="announcement-content">
-                <p>New course materials for Week 5 have been uploaded. Please review them before the next class.</p>
-            </div>
-            <div class="announcement-footer">
-                <button class="btn btn-secondary">Edit</button>
-                <button class="btn btn-danger">Delete</button>
-            </div>
-        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
