--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -43,7 +43,7 @@
     <div class="lecture-cards">
       {% for course in courses %}
         <div class="lecture-card">
-          <a href="{{ url_for('assignment_creation', course_name = course[1], course_id = course[0]) }}" class="course-link">
+          <a href="{{ url_for('assignment_creation', course_name=course[1], course_code=course[0]) }}" class="course-link">
             <div class="lecture-card-header">
               <h3>{{ course[0] }}</h3>
               <span class="course-name">{{ course[1] }}</span>
