--- a/static/css/assignment_feedback_teacher.css
+++ b/static/css/assignment_feedback_teacher.css
@@ -101,27 +101,30 @@ body {
       margin-right: 10px;
       font-weight: bold;
     }
-    .feedback-section {
-      margin-top: 20px;
-      border-top: 1px solid #000;
-      padding-top: 20px;
-    }
-    .feedback-text {
-      color: #777;
-      line-height: 1.5;
-      margin-bottom: 30px;
-    }
-    .button-container {
+   .feedback-section {
+    margin-top: 20px;
+    border-top: 1px solid #000;
+    padding-top: 20px;
+  }
+  .feedback-text {
+    color: #777;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+  .button-container {
       display: flex;
       justify-content: center;
       margin-top: 20px;
 
     }
+
     .feedback-btn {
-      background-color: white;
-      border: 1px solid #000;
-      padding: 5px 10px;
-      border: 1px solid #000;
-      border-radius: 5px;
-      box-shadow: 2px 2px 0px #000;
-    }
+  background-color: #007bff;
+  color: white;
+  border: 1px solid #000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 0px #000;
+  text-decoration: none;
+  display: inline-block;
+}
