--- a/static/css/create_feedback.css
+++ b/static/css/create_feedback.css
@@ -119,9 +119,9 @@ body {
   }
   .feedback-btn {
     background-color: white;
-    border: 1px solid #000;
-    padding: 5px 10px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    box-shadow: 2px 2px 0px #000;
+      border: 1px solid #000;
+      padding: 5px 10px;
+      border-radius: 4px;
+      color: #000;
+      font-weight: 500;
   }
