--- a/templates/teacher_course_base.html
+++ b/templates/teacher_course_base.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/teacher_course_base.css') }}">
-    {% block extra_css %}{% endblock %}
+    {% block extra_css %}<link rel="stylesheet" href="{{ url_for('static', filename='css/assignments.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/assignment_view_teacher.css') }}">
+    {% endblock %}
 </head>
 <body>
     <div class="container-fluid">
@@ -23,8 +25,8 @@
                         <i class="fas fa-arrow-left"></i>
                         <span>Back</span>
                     </a>
-                    <a href="{{ url_for('assignment_creation', course_name = course_name, course_code = course_code) }}" 
-                       class="menu-item {% if request.endpoint == 'assignment_creation' %}active{% endif %}">
+                    <a href="{{ url_for('view_assignments', course_code = course_code) }}" 
+                       class="menu-item {% if request.endpoint == 'view_assignments' %}active{% endif %}">
                         <i class="fas fa-tasks"></i>
                         <span>Assignments</span>
                     </a>
