--- a/templates/assignments_teacher.html
+++ b/templates/assignments_teacher.html
@@ -10,16 +10,12 @@
         {% if assignments %}
             {% for assignment in assignments %}
                 <div class="lecture-card">
-                    <a href="{{ url_for('assignment_view_teacher', course_code=course_code, assignment_id=assignment[0]) }}" class="course-link">
+                    <a href="{{ url_for('assignment_view_teacher', course_code=course_code, course_name = course_name, assignment_id=assignment[0]) }}" class="course-link">
                         <div class="lecture-card-header">
                             <h3>{{ assignment[1] }}</h3>
                             <span class="course-name">Deadline: {{ assignment[3].strftime('%Y-%m-%d %H:%M') }}</span>
                         </div>
                         <div class="lecture-card-content">
-                            <div class="course-stats">
-                                <span><i class="fas fa-file-alt"></i> Submissions: {{ assignment[5] }}</span>
-                                <span><i class="fas fa-check"></i> Graded: {{ assignment[6] }}</span>
-                            </div>
                             <p class="description">{{ assignment[2][:100] }}{% if assignment[2]|length > 100 %}...{% endif %}</p>
                         </div>
                     </a>
@@ -27,17 +23,9 @@
             {% endfor %}
         {% else %}
             <div class="no-courses">
-                <p>No assignments available.</p>
-                <p>Click the + button to create a new assignment.</p>
+                <p>No assignments available for this course.</p>
             </div>
         {% endif %}
     </div>
-
-    <!-- Add Button -->
-    <div class="add-button">
-        <a href="{{ url_for('assignment_creation', course_code=course_code) }}">
-            <i class="fas fa-plus"></i>
-        </a>
-    </div>
 </div>
-{% endblock %} 
+{% endblock %}
